found spacing issue final product

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -518,7 +518,7 @@ span.sub-heading {
 .section3 {
     margin-top: 0;
     padding-top: 0;
-    margin-bottom: 32px;
+    margin-bottom: 0;
 }
 .title h1 {
   padding-top: 2rem;
